# pyvvisf

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SEGMENTATION_FAULT_FIX.md  pyproject.toml  setup.py  test_segmentation_fix.py  testlog.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-docs.yml  build-wheels.yml  ci.yml  codeql.yml  release.yml  security.yml
docs/: API_REFERENCE.md  ARCHITECTURE_IMPROVEMENTS.md  BUILDING.md  CONTEXT_MANAGER.md  CRITICAL_FIXES.md  DEVELOPMENT.md  DOCUMENTATION_CLEANUP.md  PROJECT_SUMMARY.md  README.md  SEGFAULT_BUG_FIX_SUMMARY.md  WHEEL_BUILD_GUIDE.md  WHEEL_MIGRATION_SUMMARY.md  requirements.txt
docs/source/: conf.py  index.rst
examples/: auto_coercion_demo.py  basic_usage.py  context_manager_comparison.py  context_manager_demo.py  critical_fixes_demo.py  enhanced_context_manager_demo.py  isf_renderer_demo.py  isf_window_demo.py  pure_opengl_uniform_test.py  pure_python_demo.py  time_offset_demo.py
examples/shaders/: multi_pass_red_to_blue.fs  shapes.fs  simple.fs  simple_color_animation.fs  simple_color_change.fs
patches/: vvisf-glfw-context-fix.patch
scripts/: build.sh  build_vvisf.ps1  build_vvisf.sh  cleanup_duplicates.sh  debug_segfaults.py  install_dependencies.sh  test_architecture.sh  test_wheel.py
src/: vvisf_test.cpp
src/pyvvisf/: __init__.py  _version.py  constants.py  context.py  errors.py  framebuffer_manager.py  glsl_versions.py  input_manager.py  parser.py  quad.py  renderer.py  renderer_core.py  renderer_new.py  result.py  shader_compiler.py  shader_processor.py  shader_skeletons.py  types.py  utils.py  vvisf_bindings.cpp
src/pyvvisf/core/: __init__.py  renderer.py
tests/: test_auto_coercion.py  test_batch_rendering_fix.py  test_complex_rendering.py  test_critical_fixes.py  test_direct_reproduction.py  test_enhanced_error_handling.py  test_isf_renderer.py  test_isf_renderer_errors.py  test_isf_spec.py  test_pure_python.py  test_pyvvisf.py  test_renderer.py  test_renderer_crash.py  test_safe_rendering.py  test_segfault_reproduction.py  test_time_offset.py
